# lang-plugin-cpp

./: CMakeLists.txt  LICENSE.md  README.md
compiler/: CMakeLists.txt  cpp_compiler_entry.cpp
compiler/test/: CMakeLists.txt  e2e_entity_test.cpp
idl/: CMakeLists.txt  cpp_idl_plugin.cpp
install/: plugin_hooks.py  plugin_manifest.json
runtime/: CMakeLists.txt  cpp_api.cpp
test/: CMakeLists.txt  cpp_test_env.cpp  cpp_test_env.h  test_arrays.cpp  test_core_c.cpp  test_core_cpp.cpp  test_primitives.cpp
